--- a/templates/index.html
+++ b/templates/index.html
@@ -22,12 +22,15 @@
                         <div class="personal_text">
                             <h6>Hello Everybody, i am</h6>
                             <h3>{{ home_banner_name }}</h3>
-                            <h4>{{ home_banner_title}}</h4>
+                            <h4>{{ home_banner_title }}</h4>
                             <p>{{ home_banner_description }}</p>
                             <ul class="list basic_info">
-                                <li><a href="javascript:;"><i class="lnr lnr-calendar-full"></i>{{ home_banner_birthdate }}</a></li>
-                                <li><a href="tel:{{ home_banner_gsm }}"><i class="lnr lnr-phone-handset"></i>{{ home_banner_telephone }}</a></li>
-                                <li><a href="mailto:{{ home_banner_email}}"><i class="lnr lnr-envelope"></i>{{ home_banner_email }}</a></li>
+                                <li><a href="javascript:;"><i
+                                        class="lnr lnr-calendar-full"></i>{{ home_banner_birthdate }}</a></li>
+                                <li><a href="tel:{{ home_banner_gsm }}"><i
+                                        class="lnr lnr-phone-handset"></i>{{ home_banner_telephone }}</a></li>
+                                <li><a href="mailto:{{ home_banner_email }}"><i
+                                        class="lnr lnr-envelope"></i>{{ home_banner_email }}</a></li>
                                 <li><a href="#"><i class="lnr lnr-home"></i>{{ home_banner_location }}</a></li>
                             </ul>
                             <ul class="list personal_social">
@@ -58,51 +61,21 @@
             <div class="col-lg-6">
                 <div class="tools_expert">
                     <div class="skill_main">
-                        <div class="skill_item">
-                            <h4>Python <span class="counter">85</span>%</h4>
-                            <div class="progress_br">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0"
-                                         aria-valuemax="100"></div>
+
+                        {% for skill in skills %}
+                            <div class="skill_item">
+                                <h4> {{ skill.name }} <span class="counter">{{ skill.percentage }}</span>%</h4>
+                                <div class="progress_br">
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="{{ skill.percentage }}"
+                                             aria-valuemin="0"
+                                             aria-valuemax="100"></div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="skill_item">
-                            <h4>Photoshop <span class="counter">90</span>%</h4>
-                            <div class="progress_br">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
-                                         aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="skill_item">
-                            <h4>Illustrator <span class="counter">70</span>%</h4>
-                            <div class="progress_br">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                         aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="skill_item">
-                            <h4>Sublime <span class="counter">95</span>%</h4>
-                            <div class="progress_br">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0"
-                                         aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="skill_item">
-                            <h4>Sketch <span class="counter">75</span>%</h4>
-                            <div class="progress_br">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                                         aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                        </div>
+                        {% endfor %}
+
+
                     </div>
                 </div>
             </div>
@@ -211,7 +184,6 @@
     </div>
 </section>
 <!--================End My Tabs Area =================-->
-
 
 
 {% include 'includes/footer.html' %}
