--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,8 @@
                                 <h4> {{ skill.name }} <span class="counter">{{ skill.percentage }}</span>%</h4>
                                 <div class="progress_br">
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="{{ skill.percentage }}"
+                                        <div class="progress-bar" role="progressbar"
+                                             aria-valuenow="{{ skill.percentage }}"
                                              aria-valuemin="0"
                                              aria-valuemax="100"></div>
                                     </div>
@@ -101,82 +102,55 @@
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                     <ul class="list">
-                        <li>
-                            <span></span>
-                            <div class="media">
-                                <div class="d-flex">
-                                    <p>March 2017 to present</p>
+                        {% for experience in experiences %}
+                            <li>
+                                <span></span>
+                                <div class="media">
+                                    <div class="d-flex">
+                                        <p>{{ experience.start_date|date:"M Y" }} -
+                                            {% if experience.end_date %}
+                                                {{ experience.end_date|date:"M Y" }}
+                                            {% else %}
+                                                Present
+                                            {% endif %}
+                                        </p>
+                                    </div>
+                                    <div class="media-body">
+                                        <h4>{{ experience.company_name }}</h4>
+                                        <p>{{ experience.job_title }}<br/>{{ experience.job_location }}</p>
+                                    </div>
                                 </div>
-                                <div class="media-body">
-                                    <h4>Colorlib</h4>
-                                    <p>Senior Web Developer <br/>Santa monica, Los angeles</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <span></span>
-                            <div class="media">
-                                <div class="d-flex">
-                                    <p>March 2017 to present</p>
-                                </div>
-                                <div class="media-body">
-                                    <h4>Colorlib</h4>
-                                    <p>Senior Web Developer <br/>Santa monica, Los angeles</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <span></span>
-                            <div class="media">
-                                <div class="d-flex">
-                                    <p>March 2017 to present</p>
-                                </div>
-                                <div class="media-body">
-                                    <h4>Colorlib</h4>
-                                    <p>Senior Web Developer <br/>Santa monica, Los angeles</p>
-                                </div>
-                            </div>
-                        </li>
+                            </li>
+                        {% endfor %}
                     </ul>
                 </div>
                 <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                     <ul class="list">
+
+
+                        {% for education in educations %}
                         <li>
                             <span></span>
                             <div class="media">
                                 <div class="d-flex">
-                                    <p>March 2017 to present</p>
+                                    <p>{{ education.start_date|date:"M Y"}} -
+                                        {% if education.end_date %}
+                                            {{ education.end_date|date:"M Y" }}
+                                        {% else %}
+                                         Present
+                                        {% endif %}
+                                    </p>
                                 </div>
                                 <div class="media-body">
-                                    <h4>Colorlib</h4>
-                                    <p>Senior Web Developer <br/>Santa monica, Los angeles</p>
+                                    <h4>{{ education.school_name }}</h4>
+                                    <p>{{ education.major }}<br/>{{ education.department }}</p>
                                 </div>
                             </div>
                         </li>
-                        <li>
-                            <span></span>
-                            <div class="media">
-                                <div class="d-flex">
-                                    <p>March 2017 to present</p>
-                                </div>
-                                <div class="media-body">
-                                    <h4>Colorlib</h4>
-                                    <p>Senior Web Developer <br/>Santa monica, Los angeles</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <span></span>
-                            <div class="media">
-                                <div class="d-flex">
-                                    <p>March 2017 to present</p>
-                                </div>
-                                <div class="media-body">
-                                    <h4>Colorlib</h4>
-                                    <p>Senior Web Developer <br/>Santa monica, Los angeles</p>
-                                </div>
-                            </div>
-                        </li>
+                        {% endfor %}
+
+
+
                     </ul>
                 </div>
             </div>
