--- a/templates/contact.html
+++ b/templates/contact.html
@@ -36,18 +36,18 @@
                 <div class="contact_info">
                     <div class="info_item">
                         <i class="lnr lnr-home"></i>
-                        <h6>California, United States</h6>
-                        <p>Santa monica bullevard</p>
+                        <h6>{{ contact_area_address }}</h6>
+                        <p>{{ contact_area_address_under_info }}</p>
                     </div>
                     <div class="info_item">
                         <i class="lnr lnr-phone-handset"></i>
-                        <h6><a href="#">00 (440) 9865 562</a></h6>
-                        <p>Mon to Fri 9am to 6 pm</p>
+                        <h6><a href="#">{{ contact_area_phone }}</a></h6>
+                        <p>{{ contact_area_phone_under_info }}</p>
                     </div>
                     <div class="info_item">
                         <i class="lnr lnr-envelope"></i>
-                        <h6><a href="#">support@colorlib.com</a></h6>
-                        <p>Send us your query anytime!</p>
+                        <h6><a href="#">{{ contact_area_email }}</a></h6>
+                        <p>{{ contact_area_email_under_info }}</p>
                     </div>
                 </div>
             </div>
