chore: make frontend changes

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -24,6 +24,6 @@
                 </div>
             </div>
         </nav>
-    </div>x
+    </div>
 </header>
 <!--================Header Menu Area =================-->
