chore: make frontend changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -148,7 +148,7 @@
                                     </div>
                                     <div class="media-body">
                                         <h4>{{ education.school_name }}</h4>
-                                        <p>{{ education.major }}<br/>{{ education.department }}</p>
+                                        <p>{{ education.major }}<br/>{{ education.department }}<br/>{{ education.school_location }}</p>
                                     </div>
                                 </div>
                             </li>
