--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
             <div class="col-lg-6">
                 <div class="welcome_text">
                     <h4>About Myself</h4>
-                    <p>{{ about_myself_welcome }}</p>
+                    <p>{{ about_myself_welcome|safe }}</p>
 
                 </div>
             </div>
