--- a/templates/includes/scripts.html
+++ b/templates/includes/scripts.html
@@ -6,6 +6,8 @@
         <script src="{% static 'js/popper.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <script src="{% static 'js/stellar.js' %}"></script>
+        <script src="{% static 'js/fontawesome.js' %}"></script>
+        <script src="{% static 'js/fontawesome.min.js' %}"></script>
         <script src="{% static 'vendors/lightbox/simpleLightbox.min.js' %}"></script>
         <script src="{% static 'vendors/nice-select/js/jquery.nice-select.min.js' %}"></script>
         <script src="{% static 'vendors/isotope/imagesloaded.pkgd.min.js' %}"></script>
