--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3649,7 +3649,7 @@ h6 {
     display: inline-block;
     text-align: center;
     color: #fff;
-    font-size: 16px;
+    font-size: 24px;
 }
 
 .personal_text .personal_social li:hover a {
@@ -3859,6 +3859,7 @@ h6 {
     font-weight: bold;
     font-family: "Heebo", sans-serif;
     margin-bottom: 0px;
+    text-align: center;
 }
 
 .ab_widget p {
@@ -3945,7 +3946,9 @@ h6 {
     cursor: pointer;
     color: #fff;
 }
-
+.social_widget {
+    text-align: center;
+}
 .social_widget p {
     font-size: 14px;
     line-height: 24px;
@@ -3961,7 +3964,7 @@ h6 {
 
 .social_widget .list li a {
     color: #cccccc;
-    font-size: 14px;
+    font-size: 32px;
     transition: all 300ms linear 0s;
 }
 
