--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -11,6 +11,7 @@
     <meta name="description" content="{{ site_description }}">
     <meta name="author" content="{{ site_author }}">
     <!-- Bootstrap CSS -->
+    <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' >
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'vendors/linericon/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/fontawesome.css' %}">
