--- a/templates/contact.html
+++ b/templates/contact.html
@@ -94,7 +94,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <i class="fa fa-close"></i>
+                    <i class='bx bx-x'></i>
                 </button>
                 <h2>Thank you</h2>
                 <p>Your message is successfully sent...</p>
@@ -110,7 +110,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <i class="fa fa-close"></i>
+                    <i class='bx bx-x'></i>
                 </button>
                 <h2>Sorry !</h2>
                 <p> Something went wrong </p>
