--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -10,7 +10,7 @@
                     <p>{{ about_myself_footer }}</p>
                     <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-                        All rights reserved | This template is made with by55555555555 <a
+                        All rights reserved | This template is made with by <a
                                 href="https://colorlib.com" target="_blank">Colorlib</a>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                 </aside>
