--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3309,6 +3309,14 @@ h6 {
     margin-bottom: 0px;
 }
 
+.skill_text h4 {
+    color: #000000;
+    font-family: "Heebo", sans-serif;
+    font-size: 36px;
+    margin-bottom: 18px;
+    text-transform: uppercase;
+}
+
 .tools_expert {
     padding: 20px 0px 0px 0px;
 }
