--- a/templates/index.html
+++ b/templates/index.html
@@ -64,20 +64,29 @@
                 </div>
             </div>
             <div class="col-lg-6">
+                <div class="skill_text">
+                    <h4>My Skills</h4>
+                </div>
                 <div class="tools_expert">
                     <div class="skill_main">
 
                         {% for skill in skills %}
                             <div class="skill_item">
-                                <h4> {{ skill.name }} <span class="counter">{{ skill.percentage }}</span>%</h4>
-                                <div class="progress_br">
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar"
-                                             aria-valuenow="{{ skill.percentage }}"
-                                             aria-valuemin="0"
-                                             aria-valuemax="100"></div>
+                                {% if skill.show_percentage %}
+
+                                    <h4> {{ skill.name }} <span class="counter">{{ skill.percentage }}</span>%</h4>
+                                    <div class="progress_br">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar"
+                                                 aria-valuenow="{{ skill.percentage }}"
+                                                 aria-valuemin="0"
+                                                 aria-valuemax="100"></div>
+                                        </div>
                                     </div>
-                                </div>
+                                {% else %}
+                                    <h4> {{ skill.name }}</h4>
+                                {% endif %}
+
                             </div>
                         {% endfor %}
 
@@ -148,7 +157,8 @@
                                     </div>
                                     <div class="media-body">
                                         <h4>{{ education.school_name }}</h4>
-                                        <p>{{ education.major }}<br/>{{ education.department }}<br/>{{ education.school_location }}</p>
+                                        <p>{{ education.major }}<br/>{{ education.department }}<br/>{{ education.school_location }}
+                                        </p>
                                     </div>
                                 </div>
                             </li>
